<resources>
    <string name="app_name">BKD</string>
    <string name="home">Home</string>
    <string name="google_maps_key">AIzaSyDJmanwnDx8HE5cBeMtTA92EdgUCU3gXG4</string>
    <string name="my_reservations">My Reservations</string>
    <string name="category">Category</string>
    <string name="notifications">Notifications</string>
    <string name="my_bkd">My BKD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_with_us">Chat with us!</string>
    <string name="choose_dates">Choose dates</string>
    <string name="date">Date</string>
    <string name="pick_up_time">Pick up time</string>
    <string name="return_time">Return time</string>
    <string name="label_time">Time</string>
    <string name="pick_up_location">Pick up Location</string>
    <string name="return_location">Return Location</string>
    <string name="custom_location">Custom location</string>
    <string name="search">Search</string>
    <string name="ducato_koelwagen">Ducato Koelwagen</string>
    <string name="b">B</string>
    <string name="_16_5_m">16,5 m³</string>
    <string name="_499_kg">499 kg</string>
    <string name="_2_15_x_1_55_x_1_36_m">2,15 x 1,55 x 1,36 m</string>
    <string name="tow_bar">Tow Bar</string>
    <string name="day">/ day</string>
    <string name="_54_99">54.99</string>
    <string name="label_see_map">See map</string>
    <string name="label_parking_1">Parking 1</string>
    <string name="label_parking_2">Parking 2</string>
    <string name="label_bkd_office">BKD Office</string>
    <string name="vans">Vans</string>
    <string name="double_cabs">Double Cabs</string>
    <string name="box_trucks">Box Trucks</string>
    <string name="trucks">Trucks</string>
    <string name="frigo_vans">Frigo Vans</string>
    <string name="fiat_doblo_l1h1">Fiat Doblo L1H1</string>
    <string name="label_address_name">Address name</string>
    <string name="label_route">Route</string>
    <string name="label_ok">OK</string>
    <string name="label_search_results">Search Results</string>
    <string name="label_location_name">Location Name</string>
    <string name="feb">Feb</string>
    <string name="mon">Mon</string>
    <string name="_22">22</string>
    <string name="_15_30">15:30</string>
    <string name="label_transmission">Transmission</string>
    <string name="label_exterior">Exterior</string>
    <string name="label_5_91_x_2_42_x_2_82_m">5.91 x 2.42 x 2.82 m</string>
    <string name="label_manual">Manual</string>
    <string name="label_automatic">Automatic</string>
    <string name="label_double_cable">Double cabin</string>
    <string name="label_tail_lift">Tail Lift</string>
    <string name="label_gps_navigation">GPS navigation</string>
    <string name="label_air_conditioning">Air conditioning</string>
    <string name="the_are_no_active_reservations_yet">The are no active reservations yet.</string>
    <string name="active_reservations">Active Reservations</string>
    <string name="reservations_history">Reservations History</string>
    <string name="registration">Registration</string>
    <string name="continue_">Continue</string>
    <string name="i_agree_to_bkd">I agree to BKD</string>
    <string name="terms_amp_conditions"> <u>Terms &amp; Conditions</u></string>
    <string name="please_check_your_email_we_ve_sent_a_verification_link_for_your_bkd_account">Please, check your Email. We’ve sent a verification link for your BKD account.</string>
    <string name="email_verified_successfully">Email verified successfully</string>
    <string name="thank_you">Thank you</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_new_password">Create new password</string>
    <string name="your_new_password_must_be_different_from_previously_used_passwords">Your new password must be different from previously used passwords.</string>
    <string name="must_be_at_least_8_characters">Must be at least 8 characters</string>
    <string name="both_passwords_must_match">Both passwords must match</string>
    <string name="reset_password">Reset Password</string>
    <string name="check_your_mail">Check your mail</string>
    <string name="we_have_sent_a_password_recover_instructions_to_your_email">We have sent a password recover instructions to your email.</string>
    <string name="open_email">Open email</string>
    <string name="enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_instructions_to_reset_your_password">Enter the email associated with your account and we’ll send an email with instructions to reset your password.</string>
    <string name="send">Send</string>
    <string name="if_you_have_an_account_please_sign_in">If you have an account, please Sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="or_register_easily_via_our_chatbot">Or Register easily via our Chatbot.</string>
    <string name="register">Register</string>
    <string name="label_name_surname">Name Surname</string>
    <string name="label_about_us">About Us</string>
    <string name="language">Language</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact us</string>
    <string name="label_log_out">Log out</string>
    <string name="label_2021_all_rights_reserved">© 2021 All rights reserved</string>
    <string name="label_terms_of_use">Terms of Use</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="_details"><u>Details</u></string>
    <string name="details">Details</string>
    <string name="incl_vat">(incl. VAT)</string>
    <string name="more_info">More info</string>
    <string name="reserve">Reserve</string>
    <string name="tail_lift">Tail Lift</string>
    <string name="accessories">Accessories</string>
    <string name="additional_driver">Additional Driver</string>
    <string name="total_price">Total price</string>
    <string name="tension_straps_for_rent">Tension straps for rent</string>
    <string name="add">Add</string>
    <string name="my_drivers">My Drivers</string>
    <string name="add_driver">Add Driver</string>
    <string name="personal_information">Personal Information</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="select_all">Select all</string>


</resources>