<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon_selector"
        android:title="@string/home" />

    <item
        android:id="@+id/myReservationsFragment"
        android:icon="@drawable/my_reservation_icon_selector"
        android:title="@string/my_reservations"
        />

    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/category_icon_selector"
        android:title="@string/category"
       />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notification"

        android:title="@string/notifications" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_selector"
        android:title="@string/my_bkd" />

</menu>