<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:src="@drawable/ic_user_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/label_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/label_name_surname"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_profile" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/color_profile_line"
            app:layout_constraintTop_toBottomOf="@id/label_full_name" />

        <ImageView
            android:id="@+id/img_about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/ic_about_us"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/label_about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:text="@string/label_about_us"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/img_about_us"
            app:layout_constraintStart_toEndOf="@id/img_about_us"
            app:layout_constraintTop_toTopOf="@id/img_about_us" />

        <ImageView
            android:id="@+id/img_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/ic_flag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_about_us"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/label_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:text="@string/language"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/img_flag"
            app:layout_constraintStart_toEndOf="@id/img_flag"
            app:layout_constraintTop_toTopOf="@id/img_flag" />


        <ImageView
            android:id="@+id/img_arrow_bottom_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="23dp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="@id/label_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/label_language"
            app:layout_constraintVertical_bias="0.555"
            app:tint="#8998AA"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_notification_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_flag"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/label_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/notifications"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/img_notification"
            app:layout_constraintStart_toEndOf="@id/img_notification"
            app:layout_constraintTop_toTopOf="@id/img_notification" />

        <ToggleButton
            android:layout_width="28dp"
            android:layout_height="11dp"
            app:layout_constraintTop_toTopOf="@id/label_notification"
            app:layout_constraintBottom_toBottomOf="@id/label_notification"
            app:layout_constraintEnd_toEndOf="parent"
            android:textOn="@null"
            android:textOff="@null"
            android:background="@drawable/bg_toggle_button"
            android:layout_marginEnd="23dp" />

        <ImageView
            android:id="@+id/img_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/ic_faq"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_notification"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/label_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/faq"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/img_settings"
            app:layout_constraintStart_toEndOf="@id/img_settings"
            app:layout_constraintTop_toTopOf="@id/img_settings" />

        <ImageView
            android:id="@+id/img_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/ic_contact_us"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_settings"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/label_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/img_contact_us"
            app:layout_constraintStart_toEndOf="@id/img_contact_us"
            app:layout_constraintTop_toTopOf="@id/img_contact_us" />

        <ImageView
            android:id="@+id/img_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/ic_log_out"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_contact_us"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/label_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:text="@string/label_log_out"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/img_log_out"
            app:layout_constraintStart_toEndOf="@id/img_log_out"
            app:layout_constraintTop_toTopOf="@id/img_log_out" />


        <TextView
            android:id="@+id/label_all_right_reserved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/label_2021_all_rights_reserved"
            android:textColor="#8998AA"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/label_terms_of_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/label_terms_of_use"
            android:textColor="#8998AA"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@id/label_all_right_reserved"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/label_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/label_privacy_policy"
            android:textColor="#8998AA"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@id/label_terms_of_use"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>