<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.profile.signIn.CreateNewPasswordFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/purple_200"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_L"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_L"
                android:src="@drawable/ic_bkd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/label_create_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:paddingHorizontal="20dp"
            android:fontFamily="@font/mulish"
            android:textFontWeight="600"
            android:textStyle="normal"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            android:lineHeight="22.59sp"
            android:text="@string/create_new_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/label_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:paddingHorizontal="20dp"
            android:fontFamily="@font/mulish"
            android:textFontWeight="300"
            android:textStyle="normal"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:lineHeight="20.08sp"
            android:text="@string/your_new_password_must_be_different_from_previously_used_passwords"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_create_new_password"
            tools:targetApi="p" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            app:hintTextColor="#8998AA"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/label_1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:background="@drawable/bg_input_edit_text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label_password_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish"
            android:textFontWeight="300"
            android:textStyle="normal"
            android:textColor="@color/teal_700"
            android:textSize="12sp"
            android:lineHeight="15.06sp"
            android:text="@string/must_be_at_least_8_characters"
            app:layout_constraintStart_toStartOf="@id/password_container"
            app:layout_constraintTop_toBottomOf="@id/password_container"
            tools:targetApi="p" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:hint="@string/confirm_password"
            app:hintTextColor="#8998AA"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/password_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:background="@drawable/bg_input_edit_text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label_confirm_password_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish"
            android:textFontWeight="300"
            android:textStyle="normal"
            android:textColor="@color/teal_700"
            android:textSize="12sp"
            android:lineHeight="15.06sp"
            android:text="@string/both_passwords_must_match"
            app:layout_constraintStart_toStartOf="@id/confirm_password_container"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_container"
            tools:targetApi="p" />

        <Button
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="74dp"
            android:text="@string/reset_password"
            android:fontFamily="@font/mulish"
            android:textFontWeight="400"
            android:textStyle="normal"
            android:textSize="18sp"
            android:lineHeight="22.59sp"
            android:textAllCaps="false"
            android:background="@drawable/bg_rounded_blue"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_container"
            tools:targetApi="p" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>