<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/purple_200"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ImageBurger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_L"
                android:src="@drawable/ic_burger"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_L"
                android:src="@drawable/ic_bkd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/label_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/mulish"
            android:textFontWeight="400"
            android:textStyle="normal"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:lineHeight="20.08sp"
            android:text="@string/if_you_have_an_account_please_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            tools:targetApi="p" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="14dp"
            android:hint="@string/email_address"
            app:hintTextColor="#8998AA"
            app:layout_constraintTop_toBottomOf="@id/label_sign_in">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_input_edit_text"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:hint="@string/password"
            app:hintTextColor="#8998AA"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/email_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:background="@drawable/bg_input_edit_text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/mulish"
            android:textFontWeight="300"
            android:textStyle="normal"
            android:textColor="@color/teal_700"
            android:textSize="12sp"
            android:lineHeight="15.06sp"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_container"
            tools:targetApi="p" />

        <LinearLayout
            android:id="@+id/container_sign_in"
            android:layout_width="178dp"
            android:layout_height="42dp"
            android:layout_marginTop="62dp"
            android:background="@drawable/bg_rounded_blue"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_container">

            <TextView
                android:id="@+id/label_button_sign_in"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/mulish"
                android:textFontWeight="400"
                android:textStyle="normal"
                android:lineHeight="15sp"
                android:textColor="@color/teal_700"
                android:background="@drawable/bg_rounded_white"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textSize="12sp"
                tools:targetApi="p" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_three_slack"
                tools:ignore="ContentDescription" />

        </LinearLayout>


        <TextView
            android:id="@+id/label_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/mulish"
            android:textFontWeight="400"
            android:textStyle="normal"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:lineHeight="20.08sp"
            android:text="@string/or_register_easily_via_our_chatbot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_sign_in"
            tools:targetApi="p" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="33dp"
            android:text="@string/register"
            android:fontFamily="@font/mulish"
            android:textFontWeight="400"
            android:textStyle="normal"
            android:textSize="18sp"
            android:lineHeight="22.59sp"
            android:textAllCaps="false"
            android:background="@drawable/bg_rounded_blue"
            app:layout_constraintTop_toBottomOf="@id/label_registration"
            tools:targetApi="p" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>